# dev-env-produkt-utdrag

./: Cargo.toml
cli/: Cargo.toml  test.js
cli/src/: main.rs
cli/src/commands/: listen.rs
server/: Cargo.toml
server/src/: main.rs
