[package]
name = "enver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "3.1.6", features = ["derive"] }
clier = "0.6.4"
clier_parser = "0.7.3"
crossterm = "0.27.0"
